# glyph8

./: CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  pages.yml
crates/glyph8-cli/: Cargo.toml
crates/glyph8-cli/src/: cli.rs  fps.rs  headless.rs  input.rs  main.rs  runloop.rs
crates/glyph8-cli/tests/: headless_nestest.rs
crates/nes-core/: Cargo.toml
crates/nes-core/src/: backend.rs  controller.rs  error.rs  frame.rs  ines.rs  lib.rs
crates/nes-core/tests/: public_api.rs
crates/nes-render/: Cargo.toml
crates/nes-render/src/: halfblock.rs  lib.rs
crates/nes-tetanes-backend/: Cargo.toml
crates/nes-tetanes-backend/src/: lib.rs
docs/: qa-checklist.md
docs/site/: index.html  style.css
docs/superpowers/plans/: 2026-05-05-glyph8-stage-0-and-1a.md  2026-05-05-glyph8-stage-1b.md
docs/superpowers/specs/: 2026-05-05-glyph8-cli-nes-emulator-design.md  2026-05-05-glyph8-stage-1b-renderer-cli-design.md  2026-05-07-open-source-launch-design.md
tests/roms/: README.md  boing.nes
