[workspace]
resolver = "2"
members = [
    "crates/nes-core",
    "crates/nes-tetanes-backend",
    "crates/nes-render",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/<owner>/glyph8"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
