[package]
name = "glyph8-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "glyph8"
path = "src/main.rs"

[dependencies]
nes-core = { path = "../nes-core" }
nes-tetanes-backend = { path = "../nes-tetanes-backend" }
nes-render = { path = "../nes-render" }
crossterm = "0.28"
clap = { version = "4", features = ["derive"] }
anyhow = "1"
blake3 = "1"

[lints]
workspace = true
