[package]
name = "nes-core"
description = "Core NES types shared by glyph8 emulator backends and renderers"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
thiserror = "1"

[lints]
workspace = true
