[package]
name = "nes-render"
description = "Terminal renderer (ANSI 24-bit halfblock) for the glyph8 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nes-core = { path = "../nes-core" }
crossterm = "0.28"

[lints]
workspace = true
