[package]
name = "nes-tetanes-backend"
description = "tetanes-core backend adapter for the glyph8 emulator"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
authors.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
nes-core = { path = "../nes-core" }
tetanes-core = "0.12.2"

[lints]
workspace = true
